--- a/.github/workflows/CI_pytest.yml
+++ b/.github/workflows/CI_pytest.yml
@@ -1,24 +1,16 @@
-# ----------------------------------------------------------------------------
-# Run Tests Workflow
-# This workflow runs pytest on every push and pull request (targeting main).
-# It sets up a MariaDB service container and configures environment
-# variables for both the service and the test environment.
-# ----------------------------------------------------------------------------
-
 name: Pytest
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - 'feature_*'
+      - 'trunk'
 
 jobs:
   pytest:
     runs-on: ubuntu-24.04
-
-    # Global environment variables shared across services and steps
     env:
+      FERNET_KEY: ${{ secrets.FERNET_KEY }}
       MARIADB_ROOT_PASSWORD: uvlhub_root_password
       MARIADB_DATABASE: uvlhubdb_test
       MARIADB_TEST_DATABASE: uvlhubdb_test
@@ -29,7 +21,6 @@ jobs:
       FLASK_ENV: testing
 
     services:
-      # MariaDB service container for integration tests
       mariadb:
         image: mariadb:12.0.2
         env:
@@ -46,27 +37,31 @@ jobs:
           --health-retries=3
 
     steps:
-      
-      # Step 1: Checkout the repository code
       - name: Checkout
         uses: actions/checkout@v5
 
-      # Step 2: Set up Python environment (version 3.12)
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: '3.12'
 
-      # Step 3: Remove local editable mode for rosemary dependency (not CI-friendly)
       - name: Delete rosemary editable mode
         run: sed -i '/rosemary @ file:\/\/\/app/d' requirements.txt
 
-      # Step 4: Install Python dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-cov
 
-      # Step 5: Run the pytest test suite (ignoring Selenium tests)
-      - name: Run Tests
-        run: pytest app/modules/ --ignore-glob='*selenium*'
+      - name: Descargar Modelos NLTK y spaCy
+        run: python scripts/download_nlp_resources.py
+
+      - name: Run Tests with coverage
+        run: pytest app/modules/ --ignore-glob='*selenium*' --cov=app --cov-report=xml --cov-report=html --cov-report=term-missing
+
+      - name: Upload HTML coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-coverage-report
+          path: htmlcov/
