--- a/.github/workflows/CI_pytest.yml
+++ b/.github/workflows/CI_pytest.yml
@@ -62,3 +62,14 @@ jobs:
         with:
           name: html-coverage-report
           path: htmlcov/
+
+      - name: Run Tests with coverage - Codecov
+        run: pytest app/modules/ --ignore-glob='*selenium*' --cov=app --cov-report=xml --cov-report=term-missing
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: true
+
