--- a/.github/workflows/CI_pytest.yml
+++ b/.github/workflows/CI_pytest.yml
@@ -39,6 +39,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v6
@@ -63,15 +66,13 @@ jobs:
           name: html-coverage-report
           path: htmlcov/
 
-      - name: Run Tests with coverage - Codecov
-        run: pytest app/modules/ --ignore-glob='*selenium*' --cov=app --cov-report=xml --cov-report=term-missing
-
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           fail_ci_if_error: true
+
       - name: Deploy coverage report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
@@ -79,6 +80,3 @@ jobs:
           publish_dir: ./htmlcov
           publish_branch: gh-pages
           force_orphan: true
-
-
-
