--- a/.github/workflows/CI_pytest.yml
+++ b/.github/workflows/CI_pytest.yml
@@ -78,5 +78,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./htmlcov
-          publish_branch: gh-pages
+          publish_branch: main
           force_orphan: true
