--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}
           debug: true
+          no_raise: true
 
       - name: Print Version
         run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
