--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   bump_version:
     if: "!startsWith(github.event.head_commit.message, 'bump:')"
+    continue-on-error: true
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
