--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -7,28 +7,36 @@ on:
 
 jobs:
   bump_version:
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
-    continue-on-error: true
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
+      - name: Skip if bump commit
+        run: |
+          if [[ "${{ github.event.head_commit.message }}" == bump:* ]]; then
+            echo "Skipping bump job for bump commit"
+            exit 0
+          fi
+
       - name: Check out
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: "${{ secrets.ADMIN_TOKEN }}" 
+
       - id: cz
         name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}  
           debug: true
+
       - name: Print Version
         run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.cz.outputs.version }}
           name: Release ${{ steps.cz.outputs.version }}
           body_path: CHANGELOG.md
-          token: ${{ secrets.ADMIN_TOKEN }} 
+          token: ${{ secrets.ADMIN_TOKEN }}
