--- a/.cz.toml
+++ b/.cz.toml
@@ -1,6 +1,7 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-tag_format = "$version"
 version_scheme = "semver2"
-version = "3.6.4"
+tag_format = "$version"
 update_changelog_on_bump = true
+version = "3.6.4"
+bump_message = "chore(release): $current_version → $new_version"
