--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -1,4 +1,4 @@
-name: Bump version
+name: Bump and Release
 
 on:
   push:
@@ -6,14 +6,15 @@ on:
       - main
 
 jobs:
-  bump_version:
+  bump_and_release:
     runs-on: ubuntu-latest
-    name: "Bump version and create changelog with commitizen"
+    name: "Bump version, update changelog and create release"
     steps:
-      - name: Skip if bump commit
+      # Paso inicial: salir limpio si el commit es de release
+      - name: Skip if release commit
         run: |
-          if [[ "${{ github.event.head_commit.message }}" == bump:* ]]; then
-            echo "Skipping bump job for bump commit"
+          if [[ "${{ github.event.head_commit.message }}" == chore(release):* ]]; then
+            echo "Skipping bump job for release commit"
             exit 0
           fi
 
@@ -21,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: "${{ secrets.ADMIN_TOKEN }}" 
+          token: "${{ secrets.ADMIN_TOKEN }}"
 
       - id: cz
         name: Create bump and changelog
@@ -29,12 +30,21 @@ jobs:
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}
           debug: true
-          no_raise: true
+          no_raise: true   # evita error si no hay commits elegibles
 
-      - name: Print Version
-        run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+      - name: Push changes and tags
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          # Solo push si Commitizen generó cambios (version/tag)
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git push origin main --follow-tags
+          else
+            echo "No changes to push (no bump needed)."
+          fi
 
       - name: Create GitHub Release
+        if: ${{ steps.cz.outputs.version != '' }}
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.cz.outputs.version }}
