fix: change no_raise value to string in workflow

--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}
           debug: true
-          no_raise: true
+          no_raise: "true"
 
       - name: Push changes and tags
         run: |
