--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   bump_and_release:
     runs-on: ubuntu-latest
-    name: "Bump version, update changelog and create release"
     steps:
       - name: Skip if release commit
         run: |
@@ -29,7 +28,7 @@ jobs:
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}
           debug: true
-          no_raise: "true"
+          extra_requirements: "--no-raise"
 
       - name: Push changes and tags
         run: |
