--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -1,4 +1,4 @@
-name: Bump and Release
+name: Bump version
 
 on:
   push:
@@ -6,9 +6,9 @@ on:
       - main
 
 jobs:
-  bump_and_release:
+  bump_version:
     runs-on: ubuntu-latest
-    continue-on-error: true
+    name: "Bump version and update changelog"
     steps:
       - name: Skip if release commit
         run: |
@@ -16,17 +16,20 @@ jobs:
             echo "Skipping bump job for release commit"
             exit 0
           fi
+
       - name: Check out
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: "${{ secrets.ADMIN_TOKEN }}"
+
       - id: cz
         name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
           github_token: ${{ secrets.ADMIN_TOKEN }}
           debug: true
+
       - name: Push changes and tags
         run: |
           git config user.name "github-actions[bot]"
@@ -36,11 +39,3 @@ jobs:
           else
             echo "No changes to push (no bump needed)."
           fi
-      - name: Create GitHub Release
-        if: ${{ steps.cz.outputs.version != '' }}
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ steps.cz.outputs.version }}
-          name: Release ${{ steps.cz.outputs.version }}
-          body_path: CHANGELOG.md
-          token: ${{ secrets.ADMIN_TOKEN }}
