--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -7,8 +7,6 @@ on:
 
 jobs:
   bump_version:
-    # 👇 este if evita que se ejecute si el commit lo hizo el bot
-    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -17,17 +15,17 @@ jobs:
           fetch-depth: 0
           token: "${{ secrets.ADMIN_TOKEN }}"
 
-      - id: cz
-        name: Create bump and changelog
-        uses: commitizen-tools/commitizen-action@master
-        with:
-          github_token: ${{ secrets.ADMIN_TOKEN }}
-          debug: true
+      - name: Install Commitizen
+        run: pip install commitizen
 
-      - name: Push changes and tags
+      - name: Bump version
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          cz bump --yes --changelog --no-raise
+
+      - name: Push changes and tags
+        run: |
           if [[ -n "$(git status --porcelain)" ]]; then
             git push origin main --follow-tags
           else
