--- a/.github/workflows/CD_bumpversion.yml
+++ b/.github/workflows/CD_bumpversion.yml
@@ -33,8 +33,12 @@ jobs:
 
       - name: Push changes and tags
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           if [[ -n "$(git status --porcelain)" ]]; then
-            git push origin main --follow-tags
+            git push origin main
+            git push origin --tags
           else
             echo "No changes to push (no bump needed)."
           fi
+
